@@ -46,6 +46,7 @@ examples/fixture_create_and_print_snak_wd_instance_of_wikidata_entity.pl
 examples/fixture_create_and_print_snak_wd_item_for_this_sense_dog.pl
 examples/fixture_create_and_print_snak_wd_of_poem.pl
 examples/fixture_create_and_print_snak_wd_reference_url_fixture1.pl
+examples/fixture_create_and_print_snak_wd_retrieved_fixture1.pl
 examples/fixture_create_and_print_snak_wd_sex_or_gender_male.pl
 examples/fixture_create_and_print_snak_wd_stated_in_viaf.pl
 examples/fixture_create_and_print_value_item_wd_dog.pl
