@@ -1,4 +1,6 @@
 0.30
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Retrieved::Fixture1.
  - Fix author tests for Wikibase::Datatype::Value::Sense.
 
 0.29 2023-04-24T18:31:06+02:00
